<resources>
    <string name="app_name">zwiekszmase</string>
    <string name="splash_text">Po pierwsze zwiększ mase!</string>
    <string name="menu_home">Home</string>
    <string name="menu_bmi">BMI</string>
    <string name="menu_kalorie">Dieta</string>
    <string name="menu_quiz">Quiz</string>
    <string name="menu_wykres">Wykres</string>
    <string name="home_welcome">Witaj!</string>
    <string name="home_content">Tutaj miałem napisać ciepłe powitanie, ale zabrakło mi weny. Niech masa będzie z Tobą!</string>
    <string name="waga">Waga (kg)</string>
    <string name="wzrost">Wzrost (cm)</string>
    <string name="oblicz">Oblicz</string>
    <string name="wynik">Twój wynik: </string>
    <string name="bmi_underweight">Niedowaga</string>
    <string name="bmi_normal_weight">W normie</string>
    <string name="bmi_overweight">Nadwaga</string>
    <string name="radio_male">Mężczyzna</string>
    <string name="radio_female">Kobieta</string>
    <string name="bmi_age">Wiek: </string>
    <string name="diet_intake">Żeby zbudować mase musisz jeść conajmniej $intake kcal</string>
    <string name="diet_error">Musisz zacząć od pochwalenia się aktualnym stanem masy!</string>
    <string name="quiz_score">Twój dotychczasowy wynik to: </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="chart_title">Masa rośnie!</string>
</resources>
