<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/tabbar_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/menu_home" />

    <item
        android:id="@+id/tabbar_bmi"
        android:icon="@drawable/ic_accessibility_black_24dp"
        android:title="@string/menu_bmi" />

    <item
        android:id="@+id/tabbar_kalorie"
        android:icon="@drawable/ic_free_breakfast_black_24dp"
        android:title="@string/menu_kalorie" />

    <item
        android:id="@+id/tabbar_quiz"
        android:icon="@drawable/ic_question_answer_black_24dp"
        android:title="@string/menu_quiz" />

    <item
        android:id="@+id/tabbar_chart"
        android:icon="@drawable/ic_pie_chart_black_24dp"
        android:title="@string/menu_wykres"/>

</menu>