<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BMIFragment">

    <TextView
        android:text="@string/waga"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/weightTextView"/>

    <TextView
        android:text="@string/wzrost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/heightTextView"
        android:layout_row="1"
        android:layout_column="0"/>

    <TextView
        android:text="Wiek"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_column="0"
        android:layout_row="2"/>

    <TextView
        android:text="Płeć"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_column="0"
        android:layout_row="3"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/weightText" android:layout_row="0" android:layout_column="1"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/heightText" android:layout_row="1" android:layout_column="1"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/ageText" android:layout_row="2" android:layout_column="1"/>

    <Button
        android:text="@string/oblicz"
        android:layout_width="212dp"
        android:layout_height="wrap_content"
        android:id="@+id/caluculateButton"
        android:layout_row="4"
        android:layout_column="1"/>
    <TextView
        android:text="@string/wynik"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:id="@+id/bmiTextView" android:layout_row="5"
        android:layout_column="0"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:id="@+id/bmiText" android:layout_row="5"
        android:layout_column="1"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:id="@+id/scaleText" android:layout_row="6"
        android:layout_column="1"/>

    <LinearLayout
        android:layout_row="3"
        android:layout_column="1">

        <RadioGroup
            android:id="@+id/radioSex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <RadioButton
                android:id="@+id/radioFemale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_female"
                android:checked="true"/>

            <RadioButton
                android:id="@+id/radioMale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_male" />

        </RadioGroup>

    </LinearLayout>


</GridLayout>